adding detailed feedback

--- a/index.html
+++ b/index.html
@@ -34,10 +34,29 @@
 
   <hr class="section-divider">
 
-  <!-- Feature 1: Lytt og lær -->
+  <!-- Feature 1: Øv med støtte -->
   <section class="feature-section" id="funksjoner">
     <div class="container">
       <div class="feature-row">
+        <div class="feature-phone fade-in">
+          <div class="phone-frame">
+            <img src="assets/klassevenn-exercise-1.png" alt="Leseøvelse med støtte">
+          </div>
+        </div>
+        <div class="feature-copy fade-in">
+          <h2>Øv med støtte</h2>
+          <p>Korte og effektive leseøvelser der du leser ord og setninger fra teksten høyt i ditt eget tempo. Øv på korte og lange ord, samt enkle setninger hentet fra teksten.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <hr class="section-divider">
+
+  <!-- Feature 2: Lytt og lær -->
+  <section class="feature-section">
+    <div class="container">
+      <div class="feature-row reverse">
         <div class="feature-phone fade-in">
           <div class="phone-frame">
             <img src="assets/klassevenn-readout.png" alt="Klassevenn leser høyt">
@@ -46,25 +65,6 @@
         <div class="feature-copy fade-in">
           <h2>Lytt og lær</h2>
           <p>Klassevenn leser teksten høyt med engasjerende stemmer i rolig tempo, og oppsummerer innholdet slik at du lettere forstår det du skal jobbe med.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <hr class="section-divider">
-
-  <!-- Feature 2: Øv med støtte -->
-  <section class="feature-section">
-    <div class="container">
-      <div class="feature-row reverse">
-        <div class="feature-phone fade-in">
-          <div class="phone-frame">
-            <img src="assets/klassevenn-exercise-1.png" alt="Leseøvelse med støtte">
-          </div>
-        </div>
-        <div class="feature-copy fade-in">
-          <h2>Øv med støtte</h2>
-          <p>Korte leseøvelser der du leser teksten høyt i ditt eget tempo. Etterpå får du tilbakemelding og tips til neste gang.</p>
         </div>
       </div>
     </div>
@@ -84,6 +84,25 @@
         <div class="feature-copy fade-in">
           <h2>Smarte oppgaver</h2>
           <p>Kunstig intelligens lager øvelser og spørsmål basert på akkurat den teksten du jobber med. Hver økt er unik og tilpasset nivået ditt.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <hr class="section-divider">
+
+  <!-- Feature 4: Detaljert tilbakemelding -->
+  <section class="feature-section">
+    <div class="container">
+      <div class="feature-row reverse">
+        <div class="feature-phone fade-in">
+          <div class="phone-frame phone-frame-lg">
+            <img src="assets/klassevenn-detailed-feedback.png" alt="Detaljert tilbakemelding">
+          </div>
+        </div>
+        <div class="feature-copy fade-in">
+          <h2>Detaljert tilbakemelding</h2>
+          <p>Etter hver leseøkt kan foresatte motta en detaljert vurdering på epost, med konkrete tips til videre trening.</p>
         </div>
       </div>
     </div>
