--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="feature-copy fade-in">
           <h2>Smarte oppgaver</h2>
-          <p>Kunstig intelligens lager øvelser og spørsmål basert på akkurat den teksten du jobber med. Hver økt er unik og tilpasset nivået ditt.</p>
+          <p>Kunstig intelligens lager øvelser og spørsmål basert på akkurat den teksten du jobber med. Hver økt er unik og tilpasset teksten din.</p>
         </div>
       </div>
     </div>
