--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Klassevenn – Lesetrening med støtte</title>
+  <title>Klassevenn – Engasjerende lesetrening</title>
   <meta name="description" content="Klassevenn gjør lesetrening enklere og morsommere. Spesielt utformet for dyslektikere og alle andre som synes lesing kan være slitsomt.">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
