--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Klassevenn – Engasjerende lesetrening</title>
-  <meta name="description" content="Klassevenn gjør lesetrening enklere og morsommere. Spesielt utformet for dyslektikere og alle andre som synes lesing kan være slitsomt.">
+  <meta name="description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være slitsomt.">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
   <link rel="icon" href="assets/favicon/favicon.ico" sizes="any">
@@ -23,7 +23,7 @@
       <div class="hero-copy">
         <img src="assets/owl.png" alt="" class="hero-owl-logo fade-in">
         <h1 class="hero-logo fade-in">Klassevenn</h1>
-        <p class="hero-subtitle fade-in">Ta bilde av leksene dine og få engasjerende lesetrening på sekunder. Spesielt utformet for dyslektikere og alle andre som synes lesing kan være slitsomt.</p>
+        <p class="hero-subtitle fade-in">Ta bilde av leksene dine og få engasjerende lesetrening på sekunder. Laget med tanke på dyslektikere og alle andre som synes lesing kan være slitsomt.</p>
         <a href="#funksjoner" class="cta-button fade-in">Se hvordan det fungerer</a>
       </div>
       <div class="hero-image-wrapper">
