--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Klassevenn – Engasjerende lesetrening</title>
-  <meta name="description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være slitsomt.">
+  <meta name="description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være krevende.">
   <!-- Open Graph -->
   <meta property="og:title" content="Klassevenn – Engasjerende lesetrening for alle barn">
-  <meta property="og:description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være slitsomt.">
+  <meta property="og:description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være krevende.">
   <meta property="og:image" content="https://www.klassevenn.no/assets/og.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -17,7 +17,7 @@
   <!-- Twitter Card (also used by Slack) -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Klassevenn – Engasjerende lesetrening for alle barn">
-  <meta name="twitter:description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være slitsomt.">
+  <meta name="twitter:description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være krevende.">
   <meta name="twitter:image" content="https://www.klassevenn.no/assets/og.jpg">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -37,7 +37,7 @@
       <div class="hero-copy">
         <img src="assets/owl.png" alt="" class="hero-owl-logo fade-in">
         <h1 class="hero-logo fade-in">Klassevenn</h1>
-        <p class="hero-subtitle fade-in">Ta bilde av leksene dine og få engasjerende lesetrening på sekunder. Laget med tanke på dyslektikere og alle andre som synes lesing kan være slitsomt.</p>
+        <p class="hero-subtitle fade-in">Ta bilde av leksene dine og få engasjerende lesetrening på sekunder. Laget med tanke på dyslektikere og alle andre som synes lesing kan være krevende.</p>
         <a href="#funksjoner" class="cta-button fade-in">Se hvordan det fungerer</a>
       </div>
       <div class="hero-image-wrapper">
