--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Klassevenn – Engasjerende lesetrening</title>
   <meta name="description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være krevende.">
   <!-- Open Graph -->
-  <meta property="og:title" content="Klassevenn – Engasjerende lesetrening for alle barn">
+  <meta property="og:title" content="Klassevenn – Engasjerende lesetrening">
   <meta property="og:description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være krevende.">
   <meta property="og:image" content="https://www.klassevenn.no/assets/og.jpg">
   <meta property="og:image:width" content="1200">
@@ -16,7 +16,7 @@
   <meta property="og:locale" content="nb_NO">
   <!-- Twitter Card (also used by Slack) -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Klassevenn – Engasjerende lesetrening for alle barn">
+  <meta name="twitter:title" content="Klassevenn – Engasjerende lesetrening">
   <meta name="twitter:description" content="Klassevenn gjør lesetrening enklere og morsommere. Laget med tanke på dyslektikere og alle andre som synes lesing kan være krevende.">
   <meta name="twitter:image" content="https://www.klassevenn.no/assets/og.jpg">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
