style adjustment to privacy policy

--- a/index.html
+++ b/index.html
@@ -137,17 +137,12 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <hr class="section-divider">
-    <div class="container" style="padding-top: 48px;">
-      <div class="footer-links">
-        <a href="personvern.html" class="footer-link">Personvern</a>
-        <span class="footer-divider">·</span>
-        <a href="#" class="footer-link" id="kv-em"></a>
-      </div>
-      <div class="footer-brand">
-        <img src="assets/klassevenn-icon.png" alt="Klassevenn" class="footer-icon">
-        <span>&copy; 2026 Klassevenn</span>
-      </div>
+    <div class="container">
+      <span>&copy; 2026 Klassevenn</span>
+      <span class="footer-divider">&middot;</span>
+      <a href="personvern.html" class="footer-link">Personvern</a>
+      <span class="footer-divider">&middot;</span>
+      <a href="#" class="footer-link" id="kv-em"></a>
     </div>
   </footer>
 
