--- a/personvern.html
+++ b/personvern.html
@@ -17,27 +17,20 @@
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="policy-header">
-    <div class="container">
-      <a href="index.html" class="policy-header-link">
-        <img src="assets/klassevenn-icon.png" alt="Klassevenn" class="policy-header-icon">
-        <span>Klassevenn</span>
-      </a>
-    </div>
-  </header>
-
   <!-- Privacy Policy -->
   <main class="policy-page">
     <div class="container">
+      <a href="index.html" class="policy-owl-link">
+        <img src="assets/owl.png" alt="Klassevenn" class="policy-owl">
+      </a>
       <h1>Personvernerklæring</h1>
       <p class="policy-updated">Sist oppdatert: 19. februar 2026</p>
 
-      <h2>1. Behandlingsansvarlig</h2>
+      <h2>Behandlingsansvarlig</h2>
       <p>Klassevenn er behandlingsansvarlig for personopplysninger som samles inn gjennom appen Klassevenn. Vi er opptatt av å beskytte personvernet til brukerne våre, spesielt barn.</p>
       <p>Kontaktinformasjon finner du nederst i denne erklæringen.</p>
 
-      <h2>2. Hvilke opplysninger samles inn</h2>
+      <h2>Hvilke opplysninger samles inn</h2>
       <p>Klassevenn samler inn følgende opplysninger:</p>
       <ul>
         <li><strong>Bilder fra kamera:</strong> Når eleven tar bilde av en leksetekst, sendes bildet til vår tjeneste for prosessering. Bildet brukes kun til å generere læringsinnhold i den aktuelle økten.</li>
@@ -46,14 +39,14 @@
       </ul>
       <p>Vi samler <strong>ikke</strong> inn navn, e-postadresser, posisjonsdata eller andre direkte identifiserende opplysninger fra barn.</p>
 
-      <h2>3. Formål og rettslig grunnlag</h2>
+      <h2>Formål og rettslig grunnlag</h2>
       <p>Vi behandler personopplysninger for følgende formål:</p>
       <ul>
         <li><strong>Levering av tjenesten:</strong> Å generere tilpassede lese- og læringsoppgaver basert på elevens tekst. Rettslig grunnlag: samtykke (GDPR art. 6(1)(a)).</li>
         <li><strong>Forbedring av tjenesten:</strong> Å forstå bruksmønstre for å gjøre appen bedre. Rettslig grunnlag: berettiget interesse (GDPR art. 6(1)(f)).</li>
       </ul>
 
-      <h2>4. Kunstig intelligens (Google Gemini)</h2>
+      <h2>Kunstig intelligens (Google Gemini)</h2>
       <p>Klassevenn bruker Googles Gemini AI-plattform til å drive læringsopplevelsen. Følgende modeller er i bruk:</p>
       <ul>
         <li><strong>Gemini 3 Pro</strong> (via Gemini API): Leser og tolker tekst fra bilder, genererer leseøvelser, lytteøvelser, quiz og tilbakemeldinger, og vurderer elevens leseferdigheter.</li>
@@ -67,7 +60,7 @@
       </ul>
       <p>Data som sendes til Google brukes kun for å levere tjenesten i den aktuelle økten. Dataene brukes ikke til å trene AI-modeller. Googles behandling av data er regulert av deres <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">personvernerklæring</a>.</p>
 
-      <h2>5. Barns personvern</h2>
+      <h2>Barns personvern</h2>
       <p>Klassevenn er utviklet for barn på barneskolen, og vi tar barns personvern svært alvorlig.</p>
       <ul>
         <li>Appen er designet etter prinsippet om dataminimering — vi samler kun inn det som er nødvendig for å levere læringsopplevelsen.</li>
@@ -76,7 +69,7 @@
         <li>Innhold generert av AI er tilpasset aldersgruppen og gjennomgår sikkerhetskontroller.</li>
       </ul>
 
-      <h2>6. Lagring og sletting</h2>
+      <h2>Lagring og sletting</h2>
       <ul>
         <li><strong>Bilder:</strong> Behandles i sanntid og lagres ikke etter at økten er avsluttet.</li>
         <li><strong>Lyddata:</strong> Behandles i sanntid og lagres ikke etter at økten er avsluttet.</li>
@@ -84,14 +77,14 @@
         <li><strong>Øktdata:</strong> Resultater og fremdrift lagres lokalt på enheten.</li>
       </ul>
 
-      <h2>7. Deling med tredjeparter</h2>
+      <h2>Deling med tredjeparter</h2>
       <p>Vi deler personopplysninger med følgende tredjeparter, kun i den grad det er nødvendig for å levere tjenesten:</p>
       <ul>
         <li><strong>Google (Gemini API og Vertex AI):</strong> Bilder, tekst og lydopptak sendes til Googles Gemini-tjenester for prosessering som beskrevet i seksjon 4. Behandlingen er regulert av Googles <a href="https://policies.google.com/privacy" target="_blank" rel="noopener">personvernerklæring</a> og vår databehandleravtale.</li>
       </ul>
       <p>Vi selger ikke personopplysninger til tredjeparter, og vi deler ikke data for markedsføringsformål.</p>
 
-      <h2>8. Dine rettigheter</h2>
+      <h2>Dine rettigheter</h2>
       <p>I henhold til GDPR har du følgende rettigheter:</p>
       <ul>
         <li><strong>Rett til innsyn:</strong> Du kan be om å få vite hvilke opplysninger vi har om deg.</li>
@@ -102,13 +95,13 @@
         <li><strong>Rett til å klage:</strong> Du kan klage til Datatilsynet dersom du mener vi behandler personopplysninger i strid med regelverket.</li>
       </ul>
 
-      <h2>9. Informasjonskapsler</h2>
+      <h2>Informasjonskapsler</h2>
       <p>Klassevenn-appen bruker ikke informasjonskapsler (cookies). Nettsiden klassevenn.no bruker kun teknisk nødvendige informasjonskapsler og samler ikke inn personopplysninger gjennom nettsiden.</p>
 
-      <h2>10. Endringer i personvernerklæringen</h2>
+      <h2>Endringer i personvernerklæringen</h2>
       <p>Vi kan oppdatere denne personvernerklæringen fra tid til annen. Vesentlige endringer vil bli kommunisert gjennom appen eller på nettsiden vår.</p>
 
-      <h2>11. Kontakt</h2>
+      <h2>Kontakt</h2>
       <p>Har du spørsmål om personvern eller ønsker å utøve rettighetene dine, kan du kontakte oss på:</p>
       <p><strong>E-post:</strong> <a href="mailto:personvern@klassevenn.no">personvern@klassevenn.no</a></p>
     </div>
@@ -117,15 +110,11 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <div class="footer-links">
-        <a href="personvern.html" class="footer-link">Personvern</a>
-        <span class="footer-divider">·</span>
-        <a href="#" class="footer-link" id="kv-em"></a>
-      </div>
-      <div class="footer-brand">
-        <img src="assets/klassevenn-icon.png" alt="Klassevenn" class="footer-icon">
-        <span>&copy; 2026 Klassevenn</span>
-      </div>
+      <span>&copy; 2026 Klassevenn</span>
+      <span class="footer-divider">&middot;</span>
+      <a href="personvern.html" class="footer-link">Personvern</a>
+      <span class="footer-divider">&middot;</span>
+      <a href="#" class="footer-link" id="kv-em"></a>
     </div>
   </footer>
 
